--- a/gradle.properties
+++ b/gradle.properties
@@ -1,26 +1,19 @@
-# Sets default memory used for Gradle commands. Can be overridden by user or command line properties.
+# Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 # This is required to provide enough memory for the Minecraft decompilation process.
-org.gradle.jvmargs=-Xmx5G
+org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
-
-# In the case that Gradle needs to fork to recompile, this will set the memory for that process.
-systemProp.net.minecraftforge.gradle.repo.recompile.fork=true
-systemProp.net.minecraftforge.gradle.repo.recompile.fork.args=-Xmx5G
-
-# Opts-out of ForgeGradle automatically adding mavenCentral(), Forge's maven and MC libs maven to the repositories block
-systemProp.net.minecraftforge.gradle.repo.attach=false
 
 
 ## Environment Properties
 
 # The Minecraft version must agree with the Forge version to get a valid artifact
-minecraft_version=1.21.5
+minecraft_version=1.21.1
 # The Minecraft version range can use any release version of Minecraft as bounds.
 # Snapshots, pre-releases, and release candidates are not guaranteed to sort properly
 # as they do not follow standard versioning conventions.
-minecraft_version_range=[1.21.5,1.22)
+minecraft_version_range=[1.21.1,1.22)
 # The Forge version must agree with the Minecraft version to get a valid artifact
-forge_version=55.0.23
+forge_version=52.1.1
 # The Forge version range can use any version of Forge as bounds or match the loader version range
 forge_version_range=[0,)
 # The loader version range can only use the major version of Forge/FML as bounds
@@ -42,7 +35,7 @@ loader_version_range=[0,)
 mapping_channel=parchment
 # The mapping version to query from the mapping channel.
 # This must match the format required by the mapping channel.
-mapping_version=2025.06.15-1.21.5
+mapping_version=2024.11.17-1.21.1
 
 
 ## Mod Properties
@@ -63,4 +56,4 @@ mod_group_id=fr.redstoner507.storkmod
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
 mod_authors=redstoner507
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=Add storks to you Minecraft world!
+mod_description=I love Storks
